--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MIDTRANS_SERVER_KEY="ISI DISINI GAN"
+MIDTRANS_IS_PRODUCTION=false
+MIDTRANS_IS_SANITIZER=true
+MIDTRANS_IS_3DS=true
